Change: made the invitations new message box align correctly

--- a/app/assets/stylesheets/desktop/invitations.css.scss
+++ b/app/assets/stylesheets/desktop/invitations.css.scss
@@ -14,12 +14,12 @@
 
 #invitations-show-new-message
 {
-	width: 98%;
+	width: 505px;
 }
 
 #invitations-show-send-message-button
 {
-	float: right;
+	margin-left: 407px;
 }
 
 #invitations-new-add-user-button {
